fix: include frontend in docker cache

--- a/Dockerfile-cache
+++ b/Dockerfile-cache
@@ -1,5 +1,6 @@
 FROM maven:3-eclipse-temurin-21 AS cache
 COPY application /tmp/application
+COPY frontend /tmp/frontend
 COPY modules /tmp/modules
 COPY pom.xml /tmp/pom.xml
 WORKDIR /tmp
