feat: KFP remote implementation (#71)
* KFP remote implementation

* Function spec changed

* Source code enum

* Fix for state value

---------

Co-authored-by: kazhamiakin <kazhamiakin@gmail.com>

--- a/application/pom.xml
+++ b/application/pom.xml
@@ -241,7 +241,11 @@
             <artifactId>dh-runtime-mlrun</artifactId>
             <version>${revision}</version>
         </dependency>
-
+        <dependency>
+            <groupId>it.smartcommunitylabdhub</groupId>
+            <artifactId>dh-runtime-kfp</artifactId>
+            <version>${revision}</version>
+        </dependency>
         <dependency>
             <groupId>it.smartcommunitylabdhub</groupId>
             <artifactId>dh-console</artifactId>
