--- a/application/src/main/resources/application.yml
+++ b/application/src/main/resources/application.yml
@@ -40,7 +40,9 @@ runtime:
   dbt:
     image: ${RUNTIME_DBT_IMAGE:ghcr.io/scc-digitalhub/digitalhub-sdk/wrapper-dbt:latest}
   mlrun:
-    image: ${RUNTIME_MLRUN_IMAGE:ghcr.io/scc-digitalhub/digitalhub-sdk/wrapper-mlrun:latest}
+    image: ${RUNTIME_MLRUN_IMAGE:ghcr.io/scc-digitalhub/digitalhub-core-wrapper-mlrun:latest}
+  kfp:
+    image: ${RUNTIME_KFP_IMAGE:ghcr.io/scc-digitalhub/digitalhub-core-wrapper-kfp:latest}
 
 # Spring Docs
 springdoc:
