--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <module>modules/runtime-dbt</module>
         <module>modules/runtime-nefertem</module>
         <module>modules/runtime-mlrun</module>
+        <module>modules/runtime-kfp</module>
         <module>frontend</module>
         <module>application</module>
     </modules>
