--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <packaging>pom</packaging>
 
     <properties>
-        <revision>0.0.32</revision>
+        <revision>0.3.0-SNAPSHOT</revision>
         <java.version>21</java.version>
         <spring-boot.version>3.2.0</spring-boot.version>
         <springdoc.version>2.2.0</springdoc.version>
