feat: add LOG_LEVEL env variable to set logging

--- a/application/src/main/resources/application.yml
+++ b/application/src/main/resources/application.yml
@@ -72,6 +72,11 @@ application:
   profiles: ${spring.profiles.active:default}
 
 
+logging:
+   level:
+      ROOT: INFO
+      it.smartcommunitylabdhub: ${LOG_LEVEL:INFO}
+
 security:
   api:
     cors:
