--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xmlns="http://maven.apache.org/POM/4.0.0"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>it.smartcommunitylabdhub</groupId>
     <artifactId>digitalhub-core</artifactId>
@@ -30,6 +30,7 @@
         <module>modules/runtime-nefertem</module>
         <module>modules/runtime-mlrun</module>
         <module>modules/runtime-kfp</module>
+        <module>modules/runtime-kaniko</module>
         <module>frontend</module>
         <module>application</module>
     </modules>
