--- a/.github/workflows/update_cache.yaml
+++ b/.github/workflows/update_cache.yaml
@@ -4,7 +4,8 @@ on:
     branches:
       - main
     paths:
-      - pom.xml
+      - '**.pom.xml'
+      - '**.package.json'
     tags-ignore:
       - "*"
 env:
@@ -25,6 +26,7 @@ jobs:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+          submodules: 'true'          
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@v5.5.1
