--- a/application/pom.xml
+++ b/application/pom.xml
@@ -265,6 +265,10 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                    <layers>
+                        <enabled>true</enabled>
+                        <configuration>${project.basedir}/src/main/layers.xml</configuration>
+                    </layers>                    
                     <mainClass>it.smartcommunitylabdhub.core.CoreApplication</mainClass>
                 </configuration>
             </plugin>
