--- a/application/pom.xml
+++ b/application/pom.xml
@@ -18,7 +18,7 @@
     <groupId>it.smartcommunitylabdhub</groupId>
     <artifactId>core</artifactId>
     <name>core</name>
-    <version>0.3.0-SNAPSHOT</version>
+    <version>0.3.0-beta3</version>
     <description>Digital Hub Core</description>
     <properties>
         <revision>0.3.0-SNAPSHOT</revision>
