--- a/application/src/main/resources/application.yml
+++ b/application/src/main/resources/application.yml
@@ -16,8 +16,9 @@ server:
 spring:
   sql:
     init:
-      schema-locations: classpath:db/schema-${platform}.sql
+      schema-locations: classpath:db/schema-${spring.sql.init.platform}.sql
       mode: always
+      platform: ${JDBC_PLATFORM:h2}
   autoconfigure:
     exclude: org.springframework.boot.autoconfigure.amqp.RabbitAutoConfiguration
   batch:
@@ -27,7 +28,7 @@ spring:
     generate-ddl: true
     hibernate:
       ddl-auto: update
-    database-platform: ${JDBC_DIALECT:org.hibernate.dialect.H2Dialect}
+    # database-platform: ${JDBC_DIALECT:org.hibernate.dialect.H2Dialect}
   datasource:
     driverClassName: ${JDBC_DRIVER:org.h2.Driver}
     password: ${JDBC_PASS:password}
