Create framework-kaniko / separate configuration

--- a/application/pom.xml
+++ b/application/pom.xml
@@ -242,6 +242,11 @@
         </dependency>
         <dependency>
             <groupId>it.smartcommunitylabdhub</groupId>
+            <artifactId>dh-framework-kaniko</artifactId>
+            <version>${revision}</version>
+        </dependency>
+        <dependency>
+            <groupId>it.smartcommunitylabdhub</groupId>
             <artifactId>dh-runtime-kaniko</artifactId>
             <version>${revision}</version>
         </dependency>
