--- a/.gitignore
+++ b/.gitignore
@@ -33,22 +33,16 @@ build/
 .vscode/
 .vscode/launch.json
 
-### Env variable ###
+### Nodejs ###
 .env
-
 node_modules
 
-### Checkstyle folder###
-/src/checkstyle
 
 ### Sonar ###
 .scannerwork/
 
-/wrapper/*/sdk
-/wrapper/*/wrapper.py
-/wrapper/nefertem/nefertem
-
-/data/*
-
+### Data ##
+/data/
+/application/data/
 /application/src/main/resources/application-local.yml
 /reports
