--- a/application/pom.xml
+++ b/application/pom.xml
@@ -18,10 +18,10 @@
     <groupId>it.smartcommunitylabdhub</groupId>
     <artifactId>core</artifactId>
     <name>core</name>
-    <version>0.3.0</version>
+    <version>0.4.0-SNAPSHOT</version>
     <description>Digital Hub Core</description>
     <properties>
-        <revision>0.3.0-SNAPSHOT</revision>
+        <revision>0.4.0-SNAPSHOT</revision>
         <java.version>21</java.version>
         <spring-security.version>6.2.0</spring-security.version>
         <spring-cloud.version>2023.0.0</spring-cloud.version>
