feat: kaniko build infrastructure

--- a/application/src/main/resources/application.yml
+++ b/application/src/main/resources/application.yml
@@ -66,6 +66,13 @@ runtime:
     image: ${RUNTIME_MLRUN_IMAGE:ghcr.io/scc-digitalhub/digitalhub-core-wrapper-mlrun:latest}
   kfp:
     image: ${RUNTIME_KFP_IMAGE:ghcr.io/scc-digitalhub/digitalhub-core-wrapper-kfp:latest}
+  kaniko:
+    image: ${RUNTIME_KANIKO_IMAGE:gcr.io/kaniko-project/executor:latest}
+    init-image: ${RUNTIME_KANIKO_INIT_IMAGE:}
+    image-prefix: ${RUNTIME_KANIKO_IMAGE_PREFIX:}
+    image-registry: ${RUNTIME_KANIKO_IMAGE_REGISTRY:}
+    credentials: ${RUNTIME_KANIKO_CREDENTIALS:}
+    kaniko-args: ${RUNTIME_KANIKO_ARGS:}
 
 # Spring Docs
 springdoc:
