--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>modules/commons</module>
         <module>modules/fsm</module>
         <module>modules/framework-k8s</module>
+        <module>modules/framework-kaniko</module>
         <module>modules/runtime-container</module>
         <module>modules/runtime-dbt</module>
         <module>modules/runtime-nefertem</module>
