--- a/application/pom.xml
+++ b/application/pom.xml
@@ -30,6 +30,8 @@
         <kubernetes.version>19.0.0</kubernetes.version>
         <postgresql.version>42.7.2</postgresql.version>
         <mysql.version>8.0.33</mysql.version>
+        <checkstyle.config.location>../checkstyle/checkstyle.xml</checkstyle.config.location>
+        <checkstyle.failOnViolation>false</checkstyle.failOnViolation>
     </properties>
     <dependencies>
         <dependency>
