--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <revision>0.4.0-SNAPSHOT</revision>
         <java.version>21</java.version>
         <spring-boot.version>3.2.0</spring-boot.version>
+        <spring-security.version>6.2.0</spring-security.version>
         <springdoc.version>2.2.0</springdoc.version>
         <jackson.version>2.15.3</jackson.version>
         <slf4j.version>2.0.9</slf4j.version>
