--- a/application/src/main/resources/application.yml
+++ b/application/src/main/resources/application.yml
@@ -78,8 +78,8 @@ kaniko:
   image: ${KANIKO_IMAGE:gcr.io/kaniko-project/executor:latest}
   init-image: ${KANIKO_INIT_IMAGE:ghcr.io/scc-digitalhub/digitalhub-core-builder-tool:latest}
   image-prefix: ${KANIKO_IMAGE_PREFIX:dhcore}
-  image-registry: ${KANIKO_IMAGE_REGISTRY:}
-  secret: ${KANIKO_SECRET:}
+  image-registry: ${KANIKO_IMAGE_REGISTRY:${registry.name}}
+  secret: ${KANIKO_SECRET:${registry.secret}}
   args: ${KANIKO_ARGS:}    
 
 # MLRun config
@@ -87,6 +87,11 @@ mlrun:
   base-image: ${MLRUN_BASE_IMAGE:mlrun/mlrun}
   image-prefix: ${MLRUN_IMAGE_PREFIX:dhcore}
   image-registry: ${MLRUN_IMAGE_REGISTRY:}
+
+# registry
+registry:  
+  name: ${DOCKER_REGISTRY:}
+  secret: ${DOCKER_REGISTRY_SECRET:}
 
 
 # Kubernetes
