feat: use release name for core version
Signed-off-by: ffais <ffais@fbk.eu>

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -36,5 +36,5 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-
-          
+          build-args: |
+            "VER=${{ github.event.release.name }}"          
