--- a/application/pom.xml
+++ b/application/pom.xml
@@ -17,7 +17,7 @@
     </parent>
     <groupId>it.smartcommunitylabdhub</groupId>
     <artifactId>core</artifactId>
-    <name>core</name>
+    <name>dhcore</name>
     <version>${revision}</version>
     <description>Digital Hub Core</description>
     <properties>
