Create new branch for runtime-python. Setting up all necessary files and package.

--- a/application/pom.xml
+++ b/application/pom.xml
@@ -254,6 +254,11 @@
         </dependency>
         <dependency>
             <groupId>it.smartcommunitylabdhub</groupId>
+            <artifactId>dh-runtime-python</artifactId>
+            <version>${revision}</version>
+        </dependency>
+        <dependency>
+            <groupId>it.smartcommunitylabdhub</groupId>
             <artifactId>dh-console</artifactId>
             <version>${revision}</version>
         </dependency>
