--- a/modules/framework-k8s/pom.xml
+++ b/modules/framework-k8s/pom.xml
@@ -100,6 +100,11 @@
             <artifactId>log4j-over-slf4j</artifactId>
             <version>${slf4j.version}</version> <!-- or the latest version -->
         </dependency>
+        <dependency>
+            <groupId>net.bytebuddy</groupId>
+            <artifactId>byte-buddy</artifactId>
+            <version>1.14.17</version>
+        </dependency>
     </dependencies>
 
 
