feat: files proxy initial support for s3/http

--- a/application/pom.xml
+++ b/application/pom.xml
@@ -267,6 +267,11 @@
             <artifactId>dh-openmetadata</artifactId>
             <version>${revision}</version>
         </dependency>
+        <dependency>
+            <groupId>it.smartcommunitylabdhub</groupId>
+            <artifactId>dh-files</artifactId>
+            <version>${revision}</version>
+        </dependency>        
     </dependencies>
 
     <build>
