--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
         <module>modules/runtime-kfp</module>
         <module>modules/runtime-python</module>
         <module>modules/openmetadata-integration</module>
+        <module>modules/files</module>
         <module>frontend</module>
         <module>application</module>
     </modules>
