--- a/.github/workflows/builder-tool.yaml
+++ b/.github/workflows/builder-tool.yaml
@@ -34,6 +34,10 @@ jobs:
         uses: docker/metadata-action@v5.5.1
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=sha
+            type=ref,event=branch
+            type=raw,value=${{ github.sha }}
           labels: |
             version=${{ github.sha }}
           flavor: |
