--- a/application/src/main/resources/application.yml
+++ b/application/src/main/resources/application.yml
@@ -81,7 +81,7 @@ springdoc:
 # Kaniko config
 kaniko:
   image: ${KANIKO_IMAGE:gcr.io/kaniko-project/executor:latest}
-  init-image: ${KANIKO_INIT_IMAGE:ghcr.io/scc-digitalhub/digitalhub-core-builder-tool:main}
+  init-image: ${KANIKO_INIT_IMAGE:ghcr.io/scc-digitalhub/digitalhub-core-builder-tool:latest}
   image-prefix: ${KANIKO_IMAGE_PREFIX:dhcore}
   image-registry: ${KANIKO_IMAGE_REGISTRY:${registry.name}}
   secret: ${KANIKO_SECRET:${registry.secret}}
