Implement JwtTokenService and .well-known jwks controller

--- a/application/pom.xml
+++ b/application/pom.xml
@@ -271,7 +271,12 @@
             <groupId>it.smartcommunitylabdhub</groupId>
             <artifactId>dh-files</artifactId>
             <version>${revision}</version>
-        </dependency>        
+        </dependency>
+        <dependency>
+            <groupId>it.smartcommunitylabdhub</groupId>
+            <artifactId>dh-authorization</artifactId>
+            <version>${revision}</version>
+        </dependency>
     </dependencies>
 
     <build>
