--- a/application/src/main/resources/application.yml
+++ b/application/src/main/resources/application.yml
@@ -193,4 +193,8 @@ files:
       secret-key: ${AWS_SECRET_KEY:}
       endpoint: ${S3_ENDPOINT:}
       bucket: ${S3_BUCKET:}
-      
+
+# Keystore configuration
+keystore:
+  path: ${KEYSTORE_PATH:./data/keystore.jwks}
+  kid: ${KEYSTORE_KID:}
