--- a/application/src/main/resources/application.yml
+++ b/application/src/main/resources/application.yml
@@ -122,6 +122,8 @@ kubernetes:
     config-map: ${DH_CONFIG_COMMON_MAPS:}
     secret: ${DH_CONFIG_COMMON_SECRETS:}
   templates: ${K8S_TEMPLATES:}
+  envs:
+    prefix: ${K8S_ENVS_PREFIX:${application.name}}
 
 # Application endpoint
 application:
@@ -195,10 +197,14 @@ files:
       bucket: ${S3_BUCKET:}
 
 # Keystore configuration
-jwks:
+jwt:
   keystore:
-    path: ${KEYSTORE_PATH:classpath:/keystore.jwks}
-    kid: ${KEYSTORE_KID:}
-  jwt:
-    expiration: ${JWT_EXPIRATION:}
+    path: ${JWT_KEYSTORE_PATH:classpath:/keystore.jwks}
+    kid: ${JWT_KEYSTORE_KID:}
+  access-token:
+    duration: ${JWT_ACCESS_TOKEN_DURATION:}
+  refresh-token:
+    duration: ${JWT_REFRESH_TOKEN_DURATION:}    
+  client-id: ${JWT_CLIENT_ID:${security.basic.username}}
+  client-secret: ${JWT_CLIENT_SECRET:${security.basic.password}}
   cache-control: ${JWKS_CACHE_CONTROL:public, max-age=900, must-revalidate, no-transform}
