fix: revert changed jwt configuration to correct default

--- a/application/src/main/resources/application.yml
+++ b/application/src/main/resources/application.yml
@@ -149,7 +149,7 @@ security:
     password: ${DH_AUTH_BASIC_PASSWORD:}
   jwt:
     issuer-uri: ${DH_AUTH_JWT_ISSUER_URI:${security.oidc.issuer-uri}}
-    audience: ${DH_AUTH_JWT_AUDIENCE:${security.oidc.issuer-uri}}
+    audience: ${DH_AUTH_JWT_AUDIENCE:${security.oidc.client-id}}
     claim: ${DH_AUTH_JWT_CLAIM:roles}
   oidc:
     issuer-uri: ${DH_AUTH_OIDC_ISSUER_URI:}
