--- a/application/pom.xml
+++ b/application/pom.xml
@@ -12,7 +12,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.2.0</version>
+        <version>3.3.2</version>
         <relativePath>../</relativePath>
     </parent>
     <groupId>it.smartcommunitylabdhub</groupId>
@@ -21,12 +21,11 @@
     <version>${revision}</version>
     <description>Digital Hub Core</description>
     <properties>
-        <revision>0.6.0-SNAPSHOT</revision>
+        <revision>0.7.0-SNAPSHOT</revision>
         <java.version>21</java.version>
-        <spring-security.version>6.2.0</spring-security.version>
-        <spring-cloud.version>2023.0.0</spring-cloud.version>
+        <spring-security.version>6.3.1</spring-security.version>
         <springdoc.version>2.2.0</springdoc.version>
-        <jackson.version>2.15.3</jackson.version>
+        <!-- <jackson.version>2.15.3</jackson.version> -->
         <kubernetes.version>21.0.0-legacy</kubernetes.version>
         <postgresql.version>42.7.2</postgresql.version>
         <mysql.version>8.0.33</mysql.version>
@@ -94,37 +93,6 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-core</artifactId>
-            <version>6.2.7.Final</version>
-            <type>pom</type>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-core</artifactId>
-            <version>${jackson.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.dataformat</groupId>
-            <artifactId>jackson-dataformat-cbor</artifactId>
-            <version>${jackson.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.dataformat</groupId>
-            <artifactId>jackson-dataformat-yaml</artifactId>
-            <version>${jackson.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.module</groupId>
-            <artifactId>jackson-module-jsonSchema</artifactId>
-            <version>${jackson.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.datatype</groupId>
-            <artifactId>jackson-datatype-jsr310</artifactId>
-            <version>${jackson.version}</version> <!-- Use the latest version available -->
-        </dependency>
-        <dependency>
             <groupId>com.github.fge</groupId>
             <artifactId>json-schema-validator</artifactId>
             <version>2.2.6</version>
@@ -132,7 +100,9 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-jpamodelgen</artifactId>
-            <version>${hibernate.version}</version>
+            <!-- <version>${hibernate.version}</version> -->
+            <!-- workaround for bug in hibernate - use last working version for metamodels  -->
+             <version>6.4.9.Final</version> 
         </dependency>
 
         <dependency>
@@ -281,6 +251,14 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>21</source>
+                    <target>21</target>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
