--- a/application/src/main/resources/application.yml
+++ b/application/src/main/resources/application.yml
@@ -195,6 +195,7 @@ files:
       secret-key: ${AWS_SECRET_KEY:}
       endpoint: ${S3_ENDPOINT:}
       bucket: ${S3_BUCKET:}
+  max-column-size: ${FILES_MAX_COLUMN_SIZE:2097152}      
 
 # JWT configuration
 jwt:
