ML serving runtimes, first version (sklearn support)

--- a/application/pom.xml
+++ b/application/pom.xml
@@ -229,6 +229,11 @@
         </dependency>
         <dependency>
             <groupId>it.smartcommunitylabdhub</groupId>
+            <artifactId>dh-runtime-model-serve</artifactId>
+            <version>${revision}</version>
+        </dependency>
+        <dependency>
+            <groupId>it.smartcommunitylabdhub</groupId>
             <artifactId>dh-console</artifactId>
             <version>${revision}</version>
         </dependency>
