--- a/application/src/main/resources/application.yml
+++ b/application/src/main/resources/application.yml
@@ -71,7 +71,8 @@ runtime:
       PYTHON3_9: ${RUNTIME_PYTHON_IMAGE_3_9:ghcr.io/scc-digitalhub/digitalhub-serverless/python-runtime:3.9}
       PYTHON3_10: ${RUNTIME_PYTHON_IMAGE_3_10:ghcr.io/scc-digitalhub/digitalhub-serverless/python-runtime:3.10}
     command: /usr/local/bin/processor
-
+  sklearnserve:
+    image: ${RUNTIME_SKLEARN_SERVE_IMAGE:kserve/sklearnserver:latest}
 
 # Spring Docs
 springdoc:
